@@ -691,7 +691,7 @@ private:
     void newPage( bool next_flag );
 
     void flush( int refresh_mode, SDL_Rect *rect=NULL, bool clear_dirty_flag=true, bool direct_flag=false );
-    void flushDirect( SDL_Rect &rect, int refresh_mode );
+    void flushDirect( SDL_Rect &rect, int refresh_mode, bool updaterect=true );
     void executeLabel();
     SDL_Surface *loadImage( char *file_name, bool *has_alpha=NULL );
     int parseLine();
